bug hopefully fixed :/